@@ -1,0 +1,3 @@
+assert_normal_exit %q{
+  inspect.clear
+}, '[ruby-core:68110]'
